--- a/pages/profile.html
+++ b/pages/profile.html
@@ -135,6 +135,17 @@
   </div>
 
 
+  <center><div style="padding: 20px; color:#959595">
+    <p>If you were suddenly redirected here,
+      1. Select a Department close the tab and login again </p>
+      <p>2. If you are Seeing the subscribe button, and you are not a subscriber, Subscribe to acces content
+      </p>
+
+     <p>3. If you are already a subscriber and you are still faccing these issues, Click the cat icon to chat with one of our representatives
+     </p> 
+  
+  </div></center>
+
   <footer>
     &copy; 2023 leetNote. All rights reserved.
   </footer>
