--- a/pages/profile.html
+++ b/pages/profile.html
@@ -135,8 +135,10 @@
   </div>
 
 
-  <center><div style="padding: 20px; color:#959595">
+  <center><div style="padding: 20px; color:#959595; font-size: small;">
     <p>If you were suddenly redirected here,
+    </p> 
+     <p>
       1. Select a Department close the tab and login again </p>
       <p>2. If you are Seeing the subscribe button, and you are not a subscriber, Subscribe to acces content
       </p>
