--- a/pages/profile.html
+++ b/pages/profile.html
@@ -117,7 +117,7 @@
       }
 
 </style>
-<div id="subscribeBtn"class="subscribe-btn">Subscribe</div>
+<div id="subscribeBtn"class="subscribe-btn"> Subscribe: ₦1K/month</div>
 <script>
   // Get the subscribe button element
   var subscribeBtn = document.getElementById('subscribeBtn');
