--- a/pages/test.html
+++ b/pages/test.html
@@ -44,7 +44,7 @@
   </div>
   </div>
   <!-- Include the app.js file -->
-  <script  type="module" src="./js/notes.js"></script>
+  <script  type="module" src="./js/test.js"></script>
   <script  type="module" src="./js/global.js"></script>
 <script  type="module" src="./js/global2.js"></script>
 </body>
