--- a/pages/profile.html
+++ b/pages/profile.html
@@ -154,7 +154,7 @@
 
 
   <div class="notefab">
-    <a href="https://wa.me/+2348133801134" style="color: #fff; text-decoration: none;">
+    <a href="https://wa.me/2349049510424" style="color: #fff; text-decoration: none;">
       <span class="material-symbols-outlined">
         chat
       </span>
