--- a/pages/profile.html
+++ b/pages/profile.html
@@ -140,6 +140,7 @@
     </p> 
      <p>
       1. Select a Department close the tab and login again </p>
+      <div id ="ProgressChart"></div>
       <p>2. If you are Seeing the subscribe button, and you are not a subscriber, Subscribe to acces content
       </p>
 
