--- a/pages/profile.html
+++ b/pages/profile.html
@@ -21,7 +21,7 @@
 
     
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-  
+
 </head>
 
 <body>   
@@ -81,6 +81,7 @@
 </style>
 </head>
 <body>
+
 
 <div class="dropdown" id="dropdown">
 <div id="selected-item">Department</div>
@@ -144,7 +145,6 @@
     </p> 
      <p>
       1. Select a Department close the tab and login again </p>
-      <div id ="ProgressChart"></div>
       <p>2. If you are Seeing the subscribe button, and you are not a subscriber, Subscribe to acces content
       </p>
 
@@ -167,6 +167,10 @@
 
   </div>
   <!-- Include the app.js file -->
+
+  
+  <div id="ProgressChart"> iugc8agd8ceqg9e90 </div>
+  <script src=""></script>
   <script  type="module" src="./js/profle.js"></script>
   <script type="module" src="./js/user.js"></scripttype></script>
 </body>
