--- a/pages/profile.html
+++ b/pages/profile.html
@@ -169,8 +169,8 @@
   <!-- Include the app.js file -->
 
   
-  <div id="ProgressChart"> iugc8agd8ceqg9e90 </div>
-  <script src=""></script>
+  <center><div id="ProgressChart"></div></center>
+  <script src="./js/profle2.js"></script>
   <script  type="module" src="./js/profle.js"></script>
   <script type="module" src="./js/user.js"></scripttype></script>
 </body>
